--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="footer-row">
             <div class="footer-col">
               <h3>Il tuo posto per parlare</h3>
-              <img src="./img/italy.svg" alt="bandiera italia"><span> Italiano <i
+              <img src="./img/ita.png" alt="bandiera italia"><span> Italiano <i
                   class="fa-solid fa-angle-down"></i></span>
               <div class="social-links">
                 <a href="#"><i class="fa-brands  fa-twitter"></i></a>
