--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="align-center">
         <!-- Main Menu -->
         <nav class="header-menu">
-          <img src="./img/discord-logo.png" alt="Logo" id="logo">
+          <img src="./img/logo.svg" alt="Logo" id="logo">
           <ul class="main-menu">
             <li>
               <a href="#">VoceMenu</a>
@@ -192,7 +192,7 @@
           <div class="spacing"></div>
           <!-- Bottom of footer -->
           <div class="footer-bottom">
-            <img src="./img/discord-logo.png" alt="Logo" id="logo-footer">
+            <img src="./img/logo.svg" alt="Logo" id="logo-footer">
             <a id="register" href="#">Registrati</a>
           </div>
         </div>
