--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
           <img src="./img/logo.svg" alt="Logo" id="logo">
           <ul class="main-menu">
             <li>
-              <a href="#">VoceMenu</a>
+              <a href="#">Scarica</a>
             </li>
             <li>
-              <a href="#">VoceMenu</a>
+              <a href="#">Perché Discord</a>
             </li>
             <li>
-              <a href="#">VoceMenu</a>
+              <a href="#">Nitro</a>
             </li>
             <li>
-              <a href="#">VoceMenu</a>
+              <a href="#">Sicurezza</a>
             </li>
             <li>
-              <a href="#">VoceMenu</a>
+              <a href="#">Assistenza</a>
             </li>
           </ul>
           <a href="#" id="login">Accedi</a>
@@ -41,7 +41,7 @@
           <div class="hero-text">
             <h1>Il tuo posto per parlare</h1>
             <div class="hero-subheading">
-              Che tu faccia parte di un club scolastico, gruppo di gamer, comunita artistica mondiale, o semplicemente
+              Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente
               di
               un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu facile chiacchierare ogni
               giorno e ritrovarsi piu spesso.
@@ -81,11 +81,11 @@
         <div class="content-row">
           <img id="img-right" src="img/no-image@2x.png">
           <div class="content-text-container">
-            <div class="content-row-text">Un luogo a invito con tutto lo spazio necessario per parlare
+            <div class="content-row-text"> Dove trovarsi è facile
             </div>
             <div class="content-row-subheading">
-              I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
-              parlare della tua giornata senza intasare una chat di gruppo.
+              Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
+              lì e unirsi istantaneamente senza dover chiamare.
             </div>
           </div>
         </div>
@@ -97,11 +97,12 @@
         <div class="content-row">
           <img src="img/no-image@2x.png">
           <div class="content-text-container">
-            <div class="content-row-text">Un luogo a invito con tutto lo spazio necessario per parlare
+            <div class="content-row-text">Da pochi a un fandom
             </div>
             <div class="content-row-subheading">
-              I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
-              parlare della tua giornata senza intasare una chat di gruppo.
+              Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri
+              personalizzabile.
+              Concedi ai membri poteri speciali, crea canali privati, e molto altro.
             </div>
           </div>
         </div>
@@ -111,11 +112,11 @@
     <section>
       <div class="align-center">
         <div class="bottom-flex">
-          <div class="content-row-text">Un luogo a invito con tutto lo spazio necessario per parlare
+          <div class="content-row-text">Tecnologia affidabile per tenersi in contatto
           </div>
           <div class="content-row-subheading">
-            I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
-            parlare della tua giornata senza intasare una chat di gruppo.
+            Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video,
+            guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
           </div>
           <img src="img/no-image@2x.png">
         </div>
@@ -143,48 +144,48 @@
               </div>
             </div>
             <div class="footer-col">
-              <h4>Titolo Menu</h4>
+              <h4>Prodotto</h4>
               <ul>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
             <div class="footer-col">
-              <h4>Titolo Menu</h4>
+              <h4>Compagnia</h4>
               <ul>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">Chi siamo</a></li>
+                <li><a href="#">Lavora con noi</a></li>
+                <li><a href="#">Marchio</a></li>
+                <li><a href="#">Redazione</a></li>
+                <li><a href="#">Negozio</a></li>
               </ul>
             </div>
             <div class="footer-col">
-              <h4>Titolo Menu</h4>
+              <h4>Risorse</h4>
               <ul>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
             <div class="footer-col">
-              <h4>Titolo Menu</h4>
+              <h4>Norme</h4>
               <ul>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
-                <li><a href="#">VoceMenu</a></li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
           </div>
