--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <div class="spacing"></div>
           <!-- Bottom of footer -->
           <div class="footer-bottom">
-            <img src="./img/logo.svg" alt="Logo" id="logo-footer">
+            <a href="#"><img src="./img/logo.svg" alt="Logo" id="logo-footer"></a>
             <a id="register" href="#">Registrati</a>
           </div>
         </div>
