--- a/index.html
+++ b/index.html
@@ -11,193 +11,200 @@
   </head>
 
   <body>
-    <!-- Header Section -->
-    <section class="header-bg">
-      <div class="align-center">
-        <!-- Main Menu -->
-        <nav class="header-menu">
-          <img src="./img/logo.svg" alt="Logo" id="logo">
-          <ul class="main-menu">
-            <li>
-              <a href="#">Scarica</a>
-            </li>
-            <li>
-              <a href="#">Perché Discord</a>
-            </li>
-            <li>
-              <a href="#">Nitro</a>
-            </li>
-            <li>
-              <a href="#">Sicurezza</a>
-            </li>
-            <li>
-              <a href="#">Assistenza</a>
-            </li>
-          </ul>
-          <a href="#" id="login">Accedi</a>
-        </nav>
-        <!-- Hero text -->
-        <div class="content-align">
-          <div class="hero-text">
-            <h1>Il tuo posto per parlare</h1>
-            <div class="hero-subheading">
-              Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente
-              di
-              un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu facile chiacchierare ogni
-              giorno e ritrovarsi piu spesso.
-            </div>
-          </div>
-        </div>
-        <!-- Hero buttons -->
-        <div class="cta-btn">
-          <a href="#" class="btn-download">
-            Scarica per Mac
-          </a>
-          <button class="btn-browser-open">
-            Apri Discord nel tuo browser
-          </button>
-        </div>
-      </div>
-    </section>
-    <!-- First section with img left -->
-    <section>
-      <div class="align-center">
-        <div class="content-row">
-          <img src="img/no-image@2x.png">
-          <div class="content-text-container">
-            <div class="content-row-text">Un luogo a invito con tutto lo spazio necessario per parlare
-            </div>
-            <div class="content-row-subheading">
-              I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
-              parlare della tua giornata senza intasare una chat di gruppo.
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Second section with img right -->
-    <section class="grey-background">
-      <div class="align-center">
-        <div class="content-row">
-          <img id="img-right" src="img/no-image@2x.png">
-          <div class="content-text-container">
-            <div class="content-row-text"> Dove trovarsi è facile
-            </div>
-            <div class="content-row-subheading">
-              Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
-              lì e unirsi istantaneamente senza dover chiamare.
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Third section with img left -->
-    <section>
-      <div class="align-center">
-        <div class="content-row">
-          <img src="img/no-image@2x.png">
-          <div class="content-text-container">
-            <div class="content-row-text">Da pochi a un fandom
-            </div>
-            <div class="content-row-subheading">
-              Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri
-              personalizzabile.
-              Concedi ai membri poteri speciali, crea canali privati, e molto altro.
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Fourth section with img under text -->
-    <section>
-      <div class="align-center">
-        <div class="bottom-flex">
-          <div class="content-row-text">Tecnologia affidabile per tenersi in contatto
-          </div>
-          <div class="content-row-subheading">
-            Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video,
-            guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
-          </div>
-          <img src="img/no-image@2x.png">
-        </div>
-        <!-- Fourth section call to action -->
-        <div class="text-above-cta">
-          <h3>Pronto a iniziare la tua avventura?</h3>
-          <a href="#">Scarica per Mac</a>
-        </div>
-      </div>
-    </section>
-    <section>
-      <!-- Footer -->
-      <footer>
+    <header>
+      <!-- Header Section -->
+      <section class="header-bg">
         <div class="align-center">
-          <div class="footer-row">
-            <div class="footer-col">
-              <h3>Il tuo posto per parlare</h3>
-              <img src="./img/ita.png" alt="bandiera italia"><span> Italiano <i
-                  class="fa-solid fa-angle-down"></i></span>
-              <div class="social-links">
-                <a href="#"><i class="fa-brands  fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands  fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+          <!-- Main Menu -->
+          <nav class="header-menu">
+            <img src="./img/logo.svg" alt="Logo" id="logo">
+            <ul class="main-menu">
+              <li>
+                <a href="#">Scarica</a>
+              </li>
+              <li>
+                <a href="#">Perché Discord</a>
+              </li>
+              <li>
+                <a href="#">Nitro</a>
+              </li>
+              <li>
+                <a href="#">Sicurezza</a>
+              </li>
+              <li>
+                <a href="#">Assistenza</a>
+              </li>
+            </ul>
+            <a href="#" id="login">Accedi</a>
+          </nav>
+          <!-- Hero text -->
+          <div class="content-align">
+            <div class="hero-text">
+              <h1>Il tuo posto per parlare</h1>
+              <div class="hero-subheading">
+                Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente
+                di
+                un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piu facile chiacchierare
+                ogni
+                giorno e ritrovarsi piu spesso.
               </div>
             </div>
-            <div class="footer-col">
-              <h4>Prodotto</h4>
-              <ul>
-                <li><a href="#">Scarica</a></li>
-                <li><a href="#">Perché Discord</a></li>
-                <li><a href="#">Nitro</a></li>
-                <li><a href="#">Sicurezza</a></li>
-                <li><a href="#">Assistenza</a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Compagnia</h4>
-              <ul>
-                <li><a href="#">Chi siamo</a></li>
-                <li><a href="#">Lavora con noi</a></li>
-                <li><a href="#">Marchio</a></li>
-                <li><a href="#">Redazione</a></li>
-                <li><a href="#">Negozio</a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Risorse</h4>
-              <ul>
-                <li><a href="#">Scarica</a></li>
-                <li><a href="#">Perché Discord</a></li>
-                <li><a href="#">Nitro</a></li>
-                <li><a href="#">Sicurezza</a></li>
-                <li><a href="#">Assistenza</a></li>
-                <li><a href="#">Scarica</a></li>
-                <li><a href="#">Perché Discord</a></li>
-                <li><a href="#">Nitro</a></li>
-                <li><a href="#">Sicurezza</a></li>
-                <li><a href="#">Assistenza</a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Norme</h4>
-              <ul>
-                <li><a href="#">Scarica</a></li>
-                <li><a href="#">Perché Discord</a></li>
-                <li><a href="#">Nitro</a></li>
-                <li><a href="#">Sicurezza</a></li>
-                <li><a href="#">Assistenza</a></li>
-              </ul>
-            </div>
           </div>
-          <!-- Horizontal Line -->
-          <div class="spacing"></div>
-          <!-- Bottom of footer -->
-          <div class="footer-bottom">
-            <a href="#"><img src="./img/logo.svg" alt="Logo" id="logo-footer"></a>
-            <a id="register" href="#">Registrati</a>
+          <!-- Hero buttons -->
+          <div class="cta-btn">
+            <a href="#" class="btn-download">
+              <i class="fa-solid fa-down-long"></i> Scarica per Mac
+            </a>
+            <button class="btn-browser-open">
+              Apri Discord nel tuo browser
+            </button>
           </div>
         </div>
-      </footer>
+      </section>
+    </header>
+    <main>
+      <!-- First section with img left -->
+      <section>
+        <div class="align-center">
+          <div class="content-row">
+            <img src="img/item1.svg">
+            <div class="content-text-container">
+              <div class="content-row-text">Un luogo a invito
+                con tutto lo spazio necessario per parlare
+              </div>
+              <div class="content-row-subheading">
+                I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                semplicemente
+                parlare della tua giornata senza intasare una chat di gruppo.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Second section with img right -->
+      <section class="grey-background">
+        <div class="align-center">
+          <div class="content-row">
+            <img id="img-right" src="img/item2.svg">
+            <div class="content-text-container">
+              <div class="content-row-text"> Dove trovarsi è facile
+              </div>
+              <div class="content-row-subheading">
+                Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
+                lì e unirsi istantaneamente senza dover chiamare.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Third section with img left -->
+      <section>
+        <div class="align-center">
+          <div class="content-row">
+            <img src="img/item3.svg">
+            <div class="content-text-container">
+              <div class="content-row-text">Da pochi a un fandom
+              </div>
+              <div class="content-row-subheading">
+                Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri
+                personalizzabile.
+                Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Fourth section with img under text -->
+      <section class="grey-background">
+        <div class="align-center">
+          <div class="bottom-flex">
+            <div class="bottom-row-text">Tecnologia affidabile per tenersi in contatto
+            </div>
+            <div class="bottom-row-subheading">
+              Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
+              video,
+              guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+            </div>
+            <img src="img/item4-big.svg">
+          </div>
+          <!-- Fourth section call to action -->
+          <div class="text-above-cta">
+            <h3>Pronto a iniziare la tua avventura?</h3>
+            <a href="#"><i class="fa-solid fa-down-long"></i> Scarica per Mac</a>
+          </div>
+        </div>
+      </section>
+      <section>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <div class="align-center">
+        <div class="footer-row">
+          <div class="footer-col">
+            <h3>Il tuo posto per parlare</h3>
+            <img src="./img/ita.png" alt="bandiera italia"><span> Italiano <i class="fa-solid fa-angle-down"></i></span>
+            <div class="social-links">
+              <a href="#"><i class="fa-brands  fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands  fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="footer-col">
+            <h4>Prodotto</h4>
+            <ul>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perché Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Compagnia</h4>
+            <ul>
+              <li><a href="#">Chi siamo</a></li>
+              <li><a href="#">Lavora con noi</a></li>
+              <li><a href="#">Marchio</a></li>
+              <li><a href="#">Redazione</a></li>
+              <li><a href="#">Negozio</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Risorse</h4>
+            <ul>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perché Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perché Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Norme</h4>
+            <ul>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perché Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- Horizontal Line -->
+        <div class="spacing"></div>
+        <!-- Bottom of footer -->
+        <div class="footer-bottom">
+          <a href="#"><img src="./img/logo.svg" alt="Logo" id="logo-footer"></a>
+          <a id="register" href="#">Registrati</a>
+        </div>
+      </div>
+    </footer>
     </section>
   </body>
 
