--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="align-center">
           <!-- Main Menu -->
           <nav class="header-menu">
-            <img src="./img/logo.svg" alt="Logo" id="logo">
+            <a href="#"><img src="./img/logo.svg" alt="Logo" id="logo"></a>
             <ul class="main-menu">
               <li>
                 <a href="#">Scarica</a>
@@ -55,9 +55,7 @@
             <a href="#" class="btn-download">
               <i class="fa-solid fa-down-long"></i> Scarica per Mac
             </a>
-            <button class="btn-browser-open">
-              Apri Discord nel tuo browser
-            </button>
+            <a class="btn-browser-open" href="#">Apri Discord nel tuo browser</a>
           </div>
         </div>
       </section>
