Verified and corrected using validator.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
   <head>
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link href="http://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
     <title>Layout</title>
   </head>
 
@@ -65,10 +66,11 @@
       <section>
         <div class="align-center">
           <div class="content-row">
-            <img src="img/item1.svg">
+            <img src="img/item1.svg" alt="img">
             <div class="content-text-container">
-              <div class="content-row-text">Un luogo a invito
-                con tutto lo spazio necessario per parlare
+              <div class="content-row-text">
+                <h4>Un luogo a invito
+                  con tutto lo spazio necessario per parlare</h4>
               </div>
               <div class="content-row-subheading">
                 I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
@@ -81,11 +83,17 @@
       </section>
       <!-- Second section with img right -->
       <section class="grey-background">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="wave-top"></path>
+        </svg>
         <div class="align-center">
           <div class="content-row">
-            <img id="img-right" src="img/item2.svg">
+            <img id="img-right" src="img/item2.svg" alt="img">
             <div class="content-text-container">
-              <div class="content-row-text"> Dove trovarsi è facile
+              <div class="content-row-text">
+                <h4>Dove trovarsi è facile</h4>
               </div>
               <div class="content-row-subheading">
                 Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
@@ -97,11 +105,17 @@
       </section>
       <!-- Third section with img left -->
       <section>
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="wave-bottom"></path>
+        </svg>
         <div class="align-center">
           <div class="content-row">
-            <img src="img/item3.svg">
+            <img src="img/item3.svg" alt="img">
             <div class="content-text-container">
-              <div class="content-row-text">Da pochi a un fandom
+              <div class="content-row-text">
+                <h4>Da pochi a un fandom</h4>
               </div>
               <div class="content-row-subheading">
                 Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri
@@ -114,95 +128,103 @@
       </section>
       <!-- Fourth section with img under text -->
       <section class="grey-background">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="wave-top"></path>
+        </svg>
         <div class="align-center">
           <div class="bottom-flex">
-            <div class="bottom-row-text">Tecnologia affidabile per tenersi in contatto
+            <div class="bottom-row-text">
+              <h4>Tecnologia affidabile per tenersi in contatto</h4>
             </div>
             <div class="bottom-row-subheading">
               Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
               video,
               guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
             </div>
-            <img src="img/item4-big.svg">
+            <img src="img/item4-big.svg" alt="img">
           </div>
           <!-- Fourth section call to action -->
           <div class="text-above-cta">
+            <img src="./img/stars.svg" alt="sparkles">
             <h3>Pronto a iniziare la tua avventura?</h3>
             <a href="#"><i class="fa-solid fa-down-long"></i> Scarica per Mac</a>
           </div>
         </div>
       </section>
-      <section>
     </main>
     <!-- Footer -->
-    <footer>
-      <div class="align-center">
-        <div class="footer-row">
-          <div class="footer-col">
-            <h3>Il tuo posto per parlare</h3>
-            <img src="./img/ita.png" alt="bandiera italia"><span> Italiano <i class="fa-solid fa-angle-down"></i></span>
-            <div class="social-links">
-              <a href="#"><i class="fa-brands  fa-twitter"></i></a>
-              <a href="#"><i class="fa-brands  fa-instagram"></i></a>
-              <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+    <section>
+      <footer>
+        <div class="align-center">
+          <div class="footer-row">
+            <div class="footer-col">
+              <h3>Il tuo posto per parlare</h3>
+              <img src="./img/ita.png" alt="bandiera italia"><span> Italiano <i
+                  class="fa-solid fa-angle-down"></i></span>
+              <div class="social-links">
+                <a href="#"><i class="fa-brands  fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands  fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              </div>
+            </div>
+            <div class="footer-col">
+              <h4>Prodotto</h4>
+              <ul>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Compagnia</h4>
+              <ul>
+                <li><a href="#">Chi siamo</a></li>
+                <li><a href="#">Lavora con noi</a></li>
+                <li><a href="#">Marchio</a></li>
+                <li><a href="#">Redazione</a></li>
+                <li><a href="#">Negozio</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Risorse</h4>
+              <ul>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Norme</h4>
+              <ul>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
+              </ul>
             </div>
           </div>
-          <div class="footer-col">
-            <h4>Prodotto</h4>
-            <ul>
-              <li><a href="#">Scarica</a></li>
-              <li><a href="#">Perché Discord</a></li>
-              <li><a href="#">Nitro</a></li>
-              <li><a href="#">Sicurezza</a></li>
-              <li><a href="#">Assistenza</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>Compagnia</h4>
-            <ul>
-              <li><a href="#">Chi siamo</a></li>
-              <li><a href="#">Lavora con noi</a></li>
-              <li><a href="#">Marchio</a></li>
-              <li><a href="#">Redazione</a></li>
-              <li><a href="#">Negozio</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>Risorse</h4>
-            <ul>
-              <li><a href="#">Scarica</a></li>
-              <li><a href="#">Perché Discord</a></li>
-              <li><a href="#">Nitro</a></li>
-              <li><a href="#">Sicurezza</a></li>
-              <li><a href="#">Assistenza</a></li>
-              <li><a href="#">Scarica</a></li>
-              <li><a href="#">Perché Discord</a></li>
-              <li><a href="#">Nitro</a></li>
-              <li><a href="#">Sicurezza</a></li>
-              <li><a href="#">Assistenza</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>Norme</h4>
-            <ul>
-              <li><a href="#">Scarica</a></li>
-              <li><a href="#">Perché Discord</a></li>
-              <li><a href="#">Nitro</a></li>
-              <li><a href="#">Sicurezza</a></li>
-              <li><a href="#">Assistenza</a></li>
-            </ul>
+          <!-- Horizontal Line -->
+          <div class="spacing"></div>
+          <!-- Bottom of footer -->
+          <div class="footer-bottom">
+            <a href="#"><img src="./img/logo.svg" alt="Logo" id="logo-footer"></a>
+            <a id="register" href="#">Registrati</a>
           </div>
         </div>
-        <!-- Horizontal Line -->
-        <div class="spacing"></div>
-        <!-- Bottom of footer -->
-        <div class="footer-bottom">
-          <a href="#"><img src="./img/logo.svg" alt="Logo" id="logo-footer"></a>
-          <a id="register" href="#">Registrati</a>
-        </div>
-      </div>
-    </footer>
+      </footer>
     </section>
   </body>
 
