--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="http://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
-    <title>Layout</title>
+    <link rel="icon" type="image/x-icon" href="./img/fav-icon.svg">
+    <title>Discord | Il luogo ideale per parlare e ritrovarsi</title>
   </head>
 
   <body>
